<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combine_lidar</name>
  <version>0.0.1</version>
  <description>A package to combine two lidar sources into a single pointcloud, adjusted for translation and rotation</description>
  <maintainer email="eeshvij@gmail.com">Eesh Vij</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>interfaces</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
